// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Halo/error false 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1dfl16l=""
  >
    <div>
      not error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/error true 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-mlz2qu=""
  >
    <div>
      error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/gapSizes default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vktfms=""
  >
    <div>
      default
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/gapSizes small 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vktfms=""
  >
    <div>
      small
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/shapes default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vktfms=""
  >
    <div
      shape="default"
    >
      default
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/shapes pill 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-zx6tk2=""
  >
    <div
      shape="pill"
    >
      pill
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible false & error 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-mlz2qu=""
  >
    <div>
      not visible (always visible if error) & error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible false & not visibleOnFocus 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-ueukq1=""
  >
    <div>
      really not visible (even on focus)
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible false 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1dfl16l=""
  >
    <div>
      not visible (until focused)
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible true & error 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-mlz2qu=""
  >
    <div>
      visible & error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible true 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-vktfms=""
  >
    <div>
      visible
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visibleOnFocus enabled & error 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-mlz2qu=""
  >
    <div>
      visible when focused with error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visibleOnFocus enabled 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-1dfl16l=""
  >
    <div>
      visible when focused
    </div>
  </div>
</div>
`;
